# Carnatic-Violin-Robot

./: .gitignore  BowController.cpp  BowController.h  CMakeLists.txt  CommHandler.cpp  CommHandler.h  ErrorDef.h  Finger.cpp  Finger.h  FingerController.cpp  FingerController.h  Hathaani.ino  Hathaani_Bowing.ino  MyDefinitions.h  PitchFileParser.cpp  PitchFileParser.h  README.md  Violinist.cpp  Violinist.h  akhilandeshwari.py  alapana.py  bow.txt  bowing.py  bowing_test.py  definitions.py  hathaani.py  lpftest.py  main.cpp  main.py  pitchTrack.py  polyTest.py  profiles.py  sineProfile.py  udpHandler.py  utils.py
Dynamixel/: CMakeLists.txt
Dynamixel/Include/: Dynamixel.h
Dynamixel/Src/: Dynamixel.cpp
Examples/: Anandhabhairavi.json  Arabhi.json  Bhairavi.json  Kanada.json  Neelambari.json  SNDP.json  Sahana.json  Sindhubhairavi.json  Thodi.json
Hathaani/: CMakeLists.txt
Hathaani/Include/: BowController.h  CommHandler.h  EposController.h  Finger.h  FingerController.h  Hathaani.h  PitchFileParser.h  Util.h
Hathaani/src/: BowController.cpp  EposController.cpp  Finger.cpp  FingerController.cpp  Hathaani.cpp  PitchFileParser.cpp  main.cpp
HathaaniController/: HathaaniController.ino  recv.py  sender.py  tcp_sender.py
HathaaniController/include/: definitions.h  queue.h
HathaaniController/src/: hathaani.h  networkHandler.h  trajectory.h  util.h
HathaaniController/src/epos4/: epos4.cpp  epos4.h
Include/: ErrorDef.h  MyDefinitions.h  pch.h
Logger/: CMakeLists.txt
Logger/Include/: Logger.h  spdlog_pch.h
Logger/Src/: Logger.cpp
Tuner/Include/: Fft.h  Tuner.h  Vector.h
Tuner/include/: Fft.h  Recorder.h  Tuner.h
Tuner/src/: CMakeLists.txt  Fft.cpp  Tuner.cpp  rvfft.cpp
Violinist/include/: BowController.h  CommHandler.h  EposController.h  FingerController.h  PitchFileParser.h  Util.h  Violinist.h
Violinist/src/: BowController.cpp  CMakeLists.txt  EposController.cpp  FingerController.cpp  PitchFileParser.cpp  Violinist.cpp  main.cpp
examples/: anandha.h
include/: ErrorDef.h  MyDefinitions.h  Util.h
rmvpe/: rmvpe.py
src/: BowController.cpp  BowController.h  FingerController.cpp  FingerController.h  Hathaani.cpp  Hathaani.h  Util.cpp  Util.h  def.h  logger.cpp
src/dxl/: dxl.cpp  dxl.h
src/epos4/: epos4.cpp  epos4.h  epos4_def.h
